# trabajo-server

./: .env  Cargo.toml  MakeFile
migrations/: 20230710233455_init.down.sql  20230710233455_init.up.sql
src/: main.rs
src/core/: mod.rs
src/core/config/: config.rs
src/core/helpers/: response.rs
src/core/security/: jwt_auth.rs
src/model/: application_model.rs  job_model.rs  mod.rs  user_model.rs
src/route/: application_route.rs  file_upload.rs  job_route.rs  mod.rs  user_route.rs
src/schema/: application_schema.rs  job_schema.rs  mod.rs  user_schema.rs
src/service/: user_service.rs
