[package]
name = "trabajo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
argon2 = "0.5.0"
cargo-watch = "8.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.7.0", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
watch = "0.2.3"
handlebars = "4.3.7"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
tokio = { version = "1.28.1", features = ["full"] }
multer = "2.1.0"
futures-util = "0.3.25"
image = "0.24.5"
mime = "0.3.16"
actix-multipart = "0.5.0"
actix-files = "0.6.2"
